--- a/mw.yaml
+++ b/mw.yaml
@@ -1,7 +1,10 @@
 ---
-- hosts: all
+- hosts: 127.0.0.1
+  connection: local
   roles:
     - role: gantsign.maven
     - role: nwoetzel.eclipse
       eclipse_distro: photon
+
+
     
