--- a/roles/init/tasks/main.yaml
+++ b/roles/init/tasks/main.yaml
@@ -28,9 +28,8 @@
   vars:
     packages:
     - docker
-    - git
     - chrony
-  tags: ntp,docker,packages,clusterup
+  tags: ntp,docker,packages
 
 - name: configure chrony
   template:
@@ -38,7 +37,7 @@
     dest: /etc/chrony.conf
   notify:
   - restart chrony
-  tags: ntp,packages,clusterup
+  tags: ntp,packages
 
 - name: add insecure registry to docker
   template:
@@ -46,7 +45,7 @@
     dest: /etc/sysconfig/docker
   notify:
   - restart docker
-  tags: docker,packages,clusterup
+  tags: docker,packages
 
 - name: flush handlers
   meta: flush_handlers
@@ -56,34 +55,47 @@
     name: docker
     enabled: yes
     state: started
-  tags: docker,packages,clusterup
+  tags: docker,packages
 
 - name: log into redhat registry and force re-authorization
   shell: |
     docker login -u {{ rhs_user }} -p {{ rhs_pass }} registry.redhat.io
-  tags: docker,packages,clusterup
+  tags: docker,packages
 
 - name: create temporary directory
   tempfile:
     state: directory
   register: builddir_1
-  tags: download,clusterup
+  tags: download
 
 - name: download oc client
   get_url:
     url: https://mirror.openshift.com/pub/openshift-v3/clients/{{ openshift_version }}/linux/oc.tar.gz
     dest: "{{ builddir_1['path'] }}/oc.tar.gz"
     mode: '0664'
-  tags: download,clusterup
+  tags: download
 
 - name: extract oc client
   unarchive:
     src: "{{ builddir_1['path'] }}/oc.tar.gz"
     dest: /usr/local/sbin
-  tags: download,clusterup
+  tags: download
 
 - name: remove temporary directory
   file:
     path: "{{ builddir_1['path'] }}"
     state: absent
-  tags: download,clusterup
+  tags: download
+
+- name: prepare rc-local systemd unit
+  copy:
+    src: files/rc-local.service
+    dest: /etc/systemd/system/rc-local.service
+  tags: rclocal
+
+- name: prepare rc-local script
+  template:
+    src: templates/rc.local.j2
+    dest: /etc/rc.local
+    mode: 0770
+  tags: rclocal
