--- a/roles/init/defaults/main.yaml
+++ b/roles/init/defaults/main.yaml
@@ -1,5 +1,5 @@
 ---
-ntp_server: "{{ lookup('env', 'new_ntp') | default('time.ien.it'), true) }}"
+ntp_server: "{{ lookup('env', 'new_ntp') | default('time.ien.it', true) }}"
 rhs_user: "{{ lookup('env', 'rhs_user') }}"
 rhs_pass: "{{ lookup('env', 'rhs_pass') }}"
 domain_nip_io: "{{hostvars[inventory_hostname]['ansible_default_ipv4']['address']}}.nip.io"
