ignore error if cluster up fails - it fails if already up

--- a/roles/setup/tasks/main.yaml
+++ b/roles/setup/tasks/main.yaml
@@ -2,4 +2,5 @@
 - name: oc cluster up
   shell: |
     oc cluster up --public-hostname {{ ocp_console }} --base-dir /root/openshift.local.clusterup/
+  ignore_errors: yes
   tags: clusterup
