--- a/roles/init/tasks/main.yaml
+++ b/roles/init/tasks/main.yaml
@@ -12,6 +12,7 @@
   rhsm_repository:
     name: ["rhel-7-server-rpms", "rhel-7-server-extras-rpms", "rhel-7-server-ansible-2.6-rpms"]
     purge: True
+  tags: subscription,clusterup
 
 - name: be sure packages are installed
   yum:
