--- a/roles/init/tasks/main.yaml
+++ b/roles/init/tasks/main.yaml
@@ -10,8 +10,8 @@
 
 - name: Disable all repositories except the needed
   rhsm_repository:
-    name: "rhel-7-server-rpms", "rhel-7-server-extras-rpms", "rhel-7-server-ansible-2.6-rpms"
-    purge: True
+    name: ["rhel-7-server-rpms", "rhel-7-server-extras-rpms", "rhel-7-server-ansible-2.6-rpms"]
+    purge: true
   tags: subscription,clusterup
 
 - name: be sure packages are installed
